# quanttide-example-of-devops

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ROADMAP.md  TODO.md
docs/: index.md  plan.md  release-status.md  user-guide.md
docs/requirements/: build.md  plan.md
src/: main.rs  python.rs
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src/commands/: cancel.rs  editor.rs  export.rs  history.rs  mod.rs  publish.rs  release_status.rs  retire.rs  stage.rs
src/model/: mod.rs  release.rs
tests/: integration.rs
web-ui/: index.html
web-ui/src/: app.js
