[package]
name = "devops"
version = "0.1.0"
edition = "2021"
description = "量潮DevOps CLI — 实验室参考实现"
authors = ["Guo-Zhang <zhangguo@quanttide.com>"]

[[bin]]
name = "devops"
path = "src/main.rs"

[lib]
name = "devops"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
